fixed that annoying ass gap in login screen...
maybe...

--- a/src/search/login/Login.scss
+++ b/src/search/login/Login.scss
@@ -39,6 +39,11 @@
   .text-mask-svg {
     border-start-end-radius: 16px;
     border-start-start-radius: 16px;
+
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
   }
 
   .text-mask {
@@ -96,7 +101,6 @@
     margin: unset;
     border-end-end-radius: 16px;
     border-end-start-radius: 16px;
-    margin-top: -7.5px;
   }
 
   h1 {
@@ -196,22 +200,29 @@
 @media (max-width: 700px) {
   .login {
     width: 97vw;
+    max-width: 420px;
     min-width: unset;
-    max-width: 99vw;
     margin: 16px auto 0 auto;
     padding: 0;
     border-radius: 18px;
-
+    box-sizing: border-box;
+    
     .wrapper {
-      padding: 8vw 2vw 5vw 2vw;
+      margin-top: 0;
+      padding: 3vw 3vw 3vw 3vw;
       // border-radius: 12px;
+      margin-top: -1px;
     }
     .text-mask-svg {
-      // width: 100vw;
-      // height: 70px;
-      min-height: 48px;
-      max-width: 100vw;
-      font-size: 5vw;
+      display: block;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+      line-height: 1; // extra safe
+      margin-bottom: 0;
+      margin-top: 0;
     }
     .login-form {
       gap: 13px;
@@ -227,7 +238,8 @@
         font-size: 17px;
         padding: 12px 8px;
       }
-      .error, .input-error-tip {
+      .error,
+      .input-error-tip {
         font-size: 16px;
       }
     }
